<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModule"
            type="com.arise.common.ming.user.info.UserInfoVM" />
    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_white"
        tools:ignore="SpUsage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.arise.common.ming.views.TitleView
                android:id="@+id/title_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:id="@+id/group_nickname"
                style="@style/item_layout">

                <TextView
                    style="@style/item_title"
                    android:text="@string/nickname" />

                <TextView
                    style="@style/item_content"
                    android:text="@={viewModule.nickname}" />

                <View
                    style="@style/divider"
                    android:layout_alignParentBottom="true" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/group_portrait"
                style="@style/item_layout">

                <TextView
                    style="@style/item_title"
                    android:text="@string/portrait" />

                <com.facebook.drawee.view.SimpleDraweeView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    fresco:actualImageResource="@mipmap/portrait_default"
                    fresco:actualImageScaleType="centerInside" />

            </RelativeLayout>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/login_out"
            android:textSize="@dimen/h2"
            android:textColor="@color/font_black"
            android:gravity="center"
            android:id="@+id/login_out"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp" />

    </RelativeLayout>
</layout>

